@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,8 +21,15 @@
  * questions.
  */
 
-// key: compiler.err.non.canonical.constructor.invoke.another.constructor
+// key: compiler.err.return.before.superclass.initialized
+// key: compiler.note.preview.filename
+// key: compiler.note.preview.recompile
+// options: --enable-preview -source ${jdk.version}
 
-record R(int x) {
-    public R(int x, int y) { this.x = x; }
+class ReturnBeforeSuperclassInit {
+    ReturnBeforeSuperclassInit(boolean maybe) {
+        if (maybe)
+            return;
+        super();
+    }
 }
